# dicetower

./: .bumpversion.cfg  .gitignore  Dockerfile  Makefile  README.md  package-lock.json  package.json  pyproject.toml  vue.config.js  wsgi.py
.github/workflows/: release-dev.yml  release.yml  tests.yml
dicetower/: app.py  config.py  socketio.py
dicetower/handlers/v1/: dice.py  test.py
dicetower/handlers/v2/: dice.py
dicetower/utils/: dice.py  loader.py
dicetower/utils/dice/: lexer.py  parser.py
src/: App.vue  main.css  main.js
src/components/: Dice.vue
tests/: conftest.py
tests/unit/: test_dice.py  test_loader.py  test_socketio.py
