[tool.poetry]
name = "dicetower"
version = "0.1.0"
description = "Dicetower Application"
authors = ["Daniel Wallace <danielwallace@gtmanfred.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
python-socketio = "^4.6.0"
python-dice = "^1.3.0"
websockets = "^8.1"
uvicorn = "^0.11.8"
uvloop = "^0.14.0"
figenv = "^0.1.6"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
coverage = "^5.2.1"
flake8 = "^3.8.3"
pytest-asyncio = "^0.14.0"
requests = "^2.24.0"
asgi-lifespan = "^1.0.1"
httpx = "^0.14.3"

[tool.coverage.run]
branch = true
source = [
    "dicetower/"
]
omit = [
    ".tox/",
    "tests/*",
]

[tool.coverage.report]
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
