[tool.poetry]
name = "dicetower"
version = "0.1.0"
description = "Dicetower Application"
authors = ["Daniel Wallace <danielwallace@gtmanfred.com>"]
license = "Apache-2.0"

[[tool.poetry.source]]
default = true
name = "cheeseshop"
url = "https://pypi.org/simple"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
python-socketio = "^4.6.0"
websockets = "^8.1"
uvicorn = "^0.11.8"
uvloop = "^0.14.0"
figenv = "^0.1.6"
aiofiles = "^0.5.0"
sly = "^0.4"
dicetray = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
coverage = "^5.2.1"
flake8 = "^3.8.3"
pytest-asyncio = "^0.14.0"
requests = "^2.24.0"
asgi-lifespan = "^1.0.1"
httpx = "^0.14.3"
black = "^20.8b1"

[tool.coverage.run]
branch = true
source = [
    "dicetower/"
]
omit = [
    ".tox/",
    "tests/*",
]

[tool.coverage.report]
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
log_cli_level = "critical"
junit_family = "xunit2"
testpaths = [
    "tests/"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
